
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int O_RDWR ;
 int grantpt (int) ;
 int open (char*,int ) ;
 int unlockpt (int) ;

int find_pts(char **slave)
{
 int master;
 extern char *ptsname();


 if ((master = open("/dev/ptmx", O_RDWR)) > 0) {
  grantpt(master);
  unlockpt(master);
  *slave = ptsname(master);
  return(master);
 }

 return(-1);
}
