; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_715.c_find_pts.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_715.c_find_pts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"/dev/ptmx\00", align 1
@O_RDWR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @find_pts(i8** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8**, align 8
  %4 = alloca i32, align 4
  store i8** %0, i8*** %3, align 8
  %5 = load i32, i32* @O_RDWR, align 4
  %6 = call i32 @open(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %5)
  store i32 %6, i32* %4, align 4
  %7 = icmp sgt i32 %6, 0
  br i1 %7, label %8, label %17

8:                                                ; preds = %1
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @grantpt(i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @unlockpt(i32 %11)
  %13 = load i32, i32* %4, align 4
  %14 = call i8* (i32, ...) bitcast (i8* (...)* @ptsname to i8* (i32, ...)*)(i32 %13)
  %15 = load i8**, i8*** %3, align 8
  store i8* %14, i8** %15, align 8
  %16 = load i32, i32* %4, align 4
  store i32 %16, i32* %2, align 4
  br label %18

17:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %18

18:                                               ; preds = %17, %8
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @grantpt(i32) #1

declare dso_local i32 @unlockpt(i32) #1

declare dso_local i8* @ptsname(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
